
2019-08-28  Ron Norman <rjn@inglenet.com>

	* tree.h: Add flag_usage_defined
	* parser.y: set flag_synchronized for [UN]SIGNED-SHORT/INT/LONG 
	            set flag_synchronized for BINARY-C-LONG
	* field.c: validate that group USAGE is compatible with any field usage

2019-08-27  Simon Sobisch <simonsobisch@gnu.org>

	* cobc.c (process_command_line), flag.def: removed duplicated flag handling
	  by removing cb_flag_arithmetic_osvs and cb_flag_move_ibm

2019-08-26  Ron Norman <rjn@inglenet.com>

	* cobc.h: Add extern cb_mf_ibm_comp
	* tree.h: Add flag_ignore_sync
	* parser.y: set flag_ignore_sync for BINARY-SHORT/LONG/DOUBLE
	* field.c: test flag_ignore_sync for BINARY-SHORT/LONG/DOUBLE
	          which are never SYNCed
	* flag.def : fix help info
	* help.c : display -fibmcomp info

2019-08-17  Simon Sobisch <simonsobisch@gnu.org>

	* typeck.c (cb_encode_program_id), parser.y, codegen.c, cobc.c: changed
	  method signature to remove unnecessary check for path separators and
	  do case folding as requested - callers use explicit COB_FOLD_UPPER for
	  functions now instead of additional folding after the call, also lead
	  to removing (user_func_upper) from codegen.c
	* typeck.c (cb_encode_program_id): check for path separators now backwards
	* typeck.c: removed duplicated code for program-id encoding
	  using libcob's new cob_encode_program_id with explicit check
	  for buffer size fixing bug #584
	* scanner.l (read_literal): fixed bug #583 buffer overflow
	* cobc.c: PROGRAM-ID verification with explicit check for empty PROGRAM-ID
	  and cut of PROGRAM-IDs that are too long in the error message
	* config.def (cb_lit_length): changed internal maximum length of a literal
	  from LONG_MAX to COB_MAX_LITERAL_LEN, a new define with currently 256k
	* cobc.c (cobc_deciph_optarg): explicit check for integer overflow and
	  return INT_MAX in this case

2019-08-14  Simon Sobisch <simonsobisch@gnu.org>

	* field.c (cb_evaluate_expr): return error_node on expression overflow