@@ -5050,7 +5050,7 @@ cb_build_optim_cond (struct cb_binary_op *p)
 		n = ((size_t)f->size - 1)
 		  + (8 * (f->pic->have_sign ? 1 : 0))
 		  +	(16 * (f->flag_binary_swap ? 1 : 0));
-#if	defined(COB_NON_ALIGNED) && !defined(_MSC_VER)
+#if	defined(COB_NON_ALIGNED) && !defined(_MSC_VER) && defined(COB_ALLOW_UNALIGNED)
 		switch (f->size) {
 		case 2:
 #ifdef	COB_SHORT_BORK
@@ -5500,7 +5500,7 @@ cb_build_optim_add (cb_tree v, cb_tree n)
 			z = ((size_t)f->size - 1)
 			  + (8 * (f->pic->have_sign ? 1 : 0))
 			  + (16 * (f->flag_binary_swap ? 1 : 0));
-#if	defined(COB_NON_ALIGNED) && !defined(_MSC_VER)
+#if	defined(COB_NON_ALIGNED) && !defined(_MSC_VER) && defined(COB_ALLOW_UNALIGNED)
 			switch (f->size) {
 			case 2:
 #ifdef	COB_SHORT_BORK
@@ -5573,7 +5573,7 @@ cb_build_optim_sub (cb_tree v, cb_tree n)
 			z = ((size_t)f->size - 1)
 			  + (8 * (f->pic->have_sign ? 1 : 0))
 			  +	(16 * (f->flag_binary_swap ? 1 : 0));
-#if	defined(COB_NON_ALIGNED) && !defined(_MSC_VER)
+#if	defined(COB_NON_ALIGNED) && !defined(_MSC_VER) && defined(COB_ALLOW_UNALIGNED)
 			switch (f->size) {
 			case 2:
 #ifdef	COB_SHORT_BORK
