@@ -1,4 +1,9 @@
 
+2019-09-03  Ron Norman <rjn@inglenet.com>
+
+	* call.c: Initialize valid_char when needed
+	* numeric.c: Correct the definition of 'isinf'
+
 2019-08-28  Ron Norman <rjn@inglenet.com>
 
 	* fileio.c: Free up 'fcd' fnamePtr allocated 
